# ssr-jwt-auth-actix-web

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html  dashboard.html  index.js  loader.html  login.html
