[package]
name = "ssr-jwt-auth-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
askama = "0.12.1"
chrono = "0.4.33"
dotenv = "0.15.0"
env_logger = "0.11.1"
jsonwebtoken = "9.2.0"
log = "0.4.20"
serde = "1.0.196"
